<resources>
    <string name="app_name">AwesomeCalculator</string>

    <string name="number_9">9</string>
    <string name="number_8">8</string>
    <string name="number_7">7</string>
    <string name="number_6">6</string>
    <string name="number_5">5</string>
    <string name="number_4">4</string>
    <string name="number_3">3</string>
    <string name="number_2">2</string>
    <string name="number_1">1</string>
    <string name="number_zero">0</string>

    <string name="operator_dot">.</string>
    <string name="operator_clear">C</string>

    <string name="dialog_picker_btn_dismiss">tab anywhere to dismiss</string>
</resources>
